Layout for mobile and tablet view corrected to avoid white space below header. README doc updated with image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,9 +15,7 @@ body{
     margin:0;
     padding:0px;}
 
-section{
-    margin-left:10px;
-}
+
 
 
 /*--------------------Header----------------*/
@@ -34,10 +32,8 @@ section{
     margin-bottom:20px;
     margin-left:0px;
     margin-left:0px;
-
-    
     background-color:#ff61a5cb;
-    max-width:100%;
+    width:100%;
     height:220px;
     border: 3px solid purple;}
 
@@ -197,6 +193,7 @@ margin:0px;}
     display:inline-block;
     padding:0;
     text-align:center;
+    object-fit:fill;
   height:300px;
   animation-name: main-zoom;
   animation-duration:3s;
@@ -215,21 +212,22 @@ height:300px;
 padding:10px;}
 
 #image4 img{object-fit:fill;
+    width:100%;
 height:300px;
 padding:10px;
-width:100%;}
+}
 
 @media (max-width:992px){
     #image2{
         display:none;}
 }
 
-@media(max-width:765px){
+@media(max-width:767px){
     #image4{display:none;}
 }
 
 @media(max-width:576px){
-    #image1 img{object-fit:cover;
+    #image1 img{object-fit:scale-down;
     height:250px;}
     #image3 img{object-fit:cover;
     height:250px;}
@@ -362,9 +360,10 @@ width:100%;}
 
 .about-me{
     width:100%;
+    height:100%;
     background-color:pink;
     margin-bottom:20px;
-    margin-top:40px;}
+    margin-top:48px;}
 
 @media (max-width:576px){
     .about-me{
@@ -423,6 +422,12 @@ width:100%;}
     margin-top:240px;
     margin-bottom:20px;}
 
+ @media (max-width:768px){
+    .artwork-container{
+        margin-top:145px;
+    }
+}
+
 .artwork-heading{
     text-align:center;
     font-family:'Courgette';
@@ -436,6 +441,12 @@ width:100%;}
 /*-----------------Shop------------------------*/
 #myshop{
     margin-top:220px;}
+
+@media (max-width:768px){
+    #myshop{
+        margin-top:145px;
+    }
+}
 
 .myshop-header{
     padding-top:20px;
@@ -496,13 +507,15 @@ width:100%;}
 
 
 /*--------------------Contact Page----------------*/
-.contact-us-section{
+.contact-me-section{
     min-height:900px;
     padding-top:220px;}
 
-@media(max-width:576px){
-    .contact-us-section{padding-top:190px;
-                        min-height:600px;}}
+@media (max-width:768px){
+    .contact-me-section{
+        padding-top:145px;
+    }
+}
 
 
 .contact-heading {
